# project5

./: pyproject.toml
.github/workflows/: test.yml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
