[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Silvia Miramontes", email = "silvia.miramontes@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]

dependencies = ["pytest", "numpy", "scipy", "matplotlib", "scikit-learn"]

